# nepen

./: .gitmodules  CMakeLists.txt  readme.MD
nepenlibrary/: CMakeLists.txt  todo.txt
nepenlibrary/include/: board.hpp  card.hpp  item.hpp  nepen.hpp  pile.hpp  subject.hpp
nepenlibrary/src/: board.cpp  card.cpp  item.cpp  nepen.cpp  pile.cpp
nepenlibrary/unittests/: CMakeLists.txt  test.cpp  test_board.cpp  test_card.cpp  test_item.cpp  test_nepen.cpp  test_pile.cpp
nepensebla/: CMakeLists.txt
nepensebla/include/: nepen_controller.hpp  nepen_form.hpp
nepensebla/src/: main.cpp  nepen_controller.cpp  nepen_form.cpp
